Pull request #84: Disable VSCode auto formatting
Merge in WMN_TOOLS/matter from disable_auto_formatting to silabs

Squashed commit of the following:

commit 4db343a048dc29cdcfa311d07bbb04ccfc663dd5
Author: jepenven-silabs <jean-francois.penven@silabs.com>
Date:   Thu Sep 8 14:19:55 2022 -0400

    Disable VSCode auto formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,7 +125,7 @@
         "**/third_party/**": true
     },
     "files.eol": "\n",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "better-comments.tags": [
         {
             "tag": "!",
@@ -168,5 +168,6 @@
     "files.trimFinalNewlines": true,
     "C_Cpp.default.cppStandard": "gnu++14",
     "C_Cpp.default.cStandard": "gnu11",
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "editor.formatOnSaveMode": "modifications"
 }
