--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceFolder}/out/${input:efr32Examples}-app/${input:efr32Boards}/chip-efr32-${input:efr32Examples}-example.out",
-            "serverpath": "/Applications/SEGGER/JLink_V758e/JLinkGDBServerCLExe",
+            "serverpath": "/Applications/SEGGER/JLink_V780/JLinkGDBServerCLExe",
             "servertype": "jlink",
             "device": "${input:efr32MCU}",
             "interface": "swd",
@@ -26,19 +26,14 @@
                     }
                 ]
             }
-        }       
+        }
     ],
     "inputs": [
         {
             "type": "pickString",
             "id": "efr32Examples",
             "description": "What efr32 example do you want to build?",
-            "options": [
-                "lock",
-                "lighting",
-                "window",
-                "light-switch",
-            ],
+            "options": ["lock", "lighting", "window", "light-switch"],
             "default": "lighting"
         },
         {
