Pull request #148: EFR32 : Wifi Code movement from SDK support repo to CSA (#22990)
Merge in WMN_TOOLS/matter from feature/silabs_wifi_code_cleanup_1.0 to silabs_1.0

Squashed commit of the following:

commit 2433eff2df6a9adfac23fe82614baba8edb0a045
Merge: 577ae17f92 fd87d3920b
Author: Sharad Patil <sharad.patil@silabs.com>
Date:   Fri Oct 7 11:27:21 2022 +0530

    Merge branch 'silabs_1.0' into feature/silabs_wifi_code_cleanup_1.0

commit 577ae17f92059d8dc8a88e9f52d075a60b26ff8e
Author: sharad-patil24 <100128124+sharad-patil24@users.noreply.github.com>
Date:   Tue Oct 4 04:37:39 2022 +0530

    EFR32 : Wifi Code movement from SDK support repo to CSA (#22990)

    * EFR32: SDK support code cleanup CSA supporting changes

    * EFR2 : Movement of Wifi Implementation on CSA repo

    * EFR32 : Restyler changes

    * EFR32 : Moved rs911x and WF200 folders to example/platform/efr32

    * EFR32 : Updated license attribution/blurb in newly added files

    * Review comment addressed and matter support pointer changed

    * EFR32 : Thread build error solved

    * EFR32 : Changed the build for wifi

    * Restyler Changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -250,7 +250,7 @@
 [submodule "third_party/silabs/matter_support"]
 	path = third_party/silabs/matter_support
 	url = https://github.com/SiliconLabs/sdk_support.git
-	branch = main
+	branch = matter_1.0
 	platforms = efr32
 [submodule "third_party/silabs/gecko_sdk"]
 	path = third_party/silabs/gecko_sdk
