Pull request #220: Cherry-Pick "EFR32 lock event generation using matter shell (#23248)" from silabs to silabs_1.0
Merge in WMN_TOOLS/matter from cherry-pick/lock_events to silabs_1.0

Squashed commit of the following:

commit 19de8e8d120abbcffdf199813e4e400f3cdb2b90
Author: Michael Rupp <95718139+mykrupp@users.noreply.github.com>
Date:   Fri Oct 21 18:42:40 2022 -0400

    EFR32 lock event generation using matter shell (#23248)

    * EFR32 lock event generation using matter shell

    code review comment cleanup

    * code review comments

--- a/examples/lock-app/efr32/BUILD.gn
+++ b/examples/lock-app/efr32/BUILD.gn
@@ -187,6 +187,10 @@ efr32_executable("lock_app") {
     sources += [ "${examples_plat_dir}/uart.cpp" ]
   }
 
+  if (chip_build_libshell) {
+    sources += [ "src/EventHandlerLibShell.cpp" ]
+  }
+
   deps = [
     ":sdk",
     "${chip_root}/examples/lock-app/lock-common",
