Pull request #243: Cherry-Pick "Doc updates v1.0.0" from silabs to silabs_1.0
Merge in WMN_TOOLS/matter from cherry-pick/doc_updates_v1.0.0 to silabs_1.0

Squashed commit of the following:

commit 78067c25ba6423ccc81b612b3aa0b49755039bf7
Author: Ezra Hale <ezra.hale@silabs.com>
Date:   Fri Oct 28 20:01:49 2022 +0000

    Pull request #215: Doc updates v1.0.0

    Merge in WMN_TOOLS/matter from doc_updates_v1.0.0 to silabs

    Squashed commit of the following:

    commit 46f15d6f949cab44c10262869b2d94448d430f72
    Author: Ezra Hale <ezra.hale@silabs.com>
    Date:   Fri Oct 28 14:10:14 2022 -0400

        fixed typos on board names

    commit 55c9e89b5f006bab627120b2e5b466ba06e9792f
    Author: Ezra Hale <ezra.hale@silabs.com>
    Date:   Fri Oct 28 13:58:31 2022 -0400

        updates to boards supported in script and vscode tasks, also few updates to matter bridge readmes

    commit 49683bfb98730654f592187f373d1b20b6eada2a
    Author: Ezra Hale <ezra.hale@silabs.com>
    Date:   Fri Oct 28 12:13:03 2022 -0400

        review of silabs_examples documentation

    ... and 14 more commits

     Conflicts:
    	.vscode/tasks.json (resolved by overwriting with our changes as we maintain this file now)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,19 +66,44 @@
             "problemMatcher": {
                 "base": "$gcc"
             }
+        },
+        {
+            "label": "Copy Sample Application",
+            "type": "shell",
+            "linux": {
+                "command": "./scripts/sl_new_app.sh"
+            },
+            "osx": {
+                "command": "./scripts/sl_new_app.sh"
+            },
+            "args": [
+                "-s",
+                "examples/${input:efr32Examples}",
+                "-b",
+                "${input:efr32Boards}",
+                "-d",
+                "${input:dest}",
+            ],
+            "group": "build",
+            "isBackground": false,
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            },
+            "problemMatcher": []
         }
     ],
     "inputs": [
         {
             "type": "pickString",
             "id": "efr32Examples",
-            "description": "What efr32 example do you want to build?",
+            "description": "What efr32 example do you want to copy or build?",
             "options": [
                 "lock-app",
                 "lighting-app",
                 "window-app",
                 "light-switch-app",
-                "ota-requestor-app",
+                "thermostat",
                 "shell"
             ],
             "default": "lighting-app"
@@ -93,18 +118,30 @@
         {
             "type": "pickString",
             "id": "efr32Boards",
-            "description": "What efr32 example do you want to build?",
+            "description": "What efr32 board do you want to use?",
             "options": [
+                "BRD2601B",
+                "BRD2703A",
                 "BRD4161A",
+                "BRD4162A",
+                "BRD4163A",
                 "BRD4164A",
                 "BRD4166A",
                 "BRD4170A",
-                "BRD4170A",
                 "BRD4304A",
-                "BRD4186A",
-                "BRD4187A"
+                "BRD4316A",
+                "BRD4317A",
+                "BRD4319A",
+                "BRD4186C",
+                "BRD4187C"
             ],
             "default": "BRD4164A"
+        },
+        {
+            "type": "promptString",
+            "id": "dest",
+            "description": "Please provide a new directory name for the copied application.",
+            "default": ""
         }
     ]
 }
