Pull request #1052: DIC AWS OTA SMG Changes
Merge in WMN_TOOLS/matter from feature/aws_ota_smg to silabs

Squashed commit of the following:

commit 2e2b1f318c8ff1e00086ce45dd82e83325e1db09
Author: kirankha <kishor.rankhamb@silabs.com>
Date:   Wed Aug 23 11:33:33 2023 +0530

    Removed extra lines added

commit c3aea2e0371db116f8731522f5512218961718ec
Author: kirankha <kishor.rankhamb@silabs.com>
Date:   Wed Aug 23 11:30:47 2023 +0530

    Removed CSA Changes

commit 3282d62c6eb123830a272335992a267563b388c3
Author: kirankha <kishor.rankhamb@silabs.com>
Date:   Tue Aug 22 20:32:49 2023 +0530

    Removed jenkinsfile changes, applied indentations, deleted not required file

... and 18 more commits

--- a/.gitmodules
+++ b/.gitmodules
@@ -324,3 +324,7 @@
 	url = https://github.com/STMicroelectronics/STM32CubeWB.git
 	branch = v1.17.0
 	platforms = stm32
+[submodule "third_party/silabs/aws_ota_sdk/ota-for-aws-iot-embedded-sdk"]
+	path = third_party/silabs/aws_ota_sdk/ota-for-aws-iot-embedded-sdk
+	url = https://github.com/aws/ota-for-aws-iot-embedded-sdk.git
+    platforms = efr32
